--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header{
+    width: 100%;
+    height: 50px;
+    background-color: darkblue;
+}
+
+.container{
+    width: 70%;
+    margin: 0 auto;
+}
