--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,51 @@ header{
     background-color: darkblue;
 }
 
+main{
+    background-color: aquamarine;
+}
+
 .container{
     width: 70%;
     margin: 0 auto;
+}
+.cards-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 50px 0px;
+}
+
+.card-container{
+    width: calc((100% / 3) - 10px);
+    text-align: center;
+    margin: 10px 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img-container{
+    width: 70%;
+    display: flex;
+    justify-content: center;
+}
+
+.img-container img{
+    max-width: 100%;
+}
+
+.title{
+    font-size: 24px;
+    font-weight: 700;
+    padding: 10px 0px;
+}
+
+.author{
+    font-size: 18px;
+    font-weight: 100;
+    font-style: italic;
+}
+
+.year{
+    padding: 6px 0px;
 }
